--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <a href="#timeline" class="text-slate-600 hover:text-upsekil-blue font-medium transition">Timeline</a>
                     <a href="#faq" class="text-slate-600 hover:text-upsekil-blue font-medium transition">FAQ</a>
                     <a href="#register" class="px-6 py-2.5 rounded-full gradient-bg text-white font-medium shadow-lg shadow-blue-500/30 hover:shadow-blue-500/50 hover:-translate-y-0.5 transition transform duration-200">
-                        Daftar Batch 1
+                        Daftar Sekarang
                     </a>
                 </div>
 
@@ -527,4 +527,5 @@
         });
     </script>
 </body>
+
 </html>
