--- a/index.html
+++ b/index.html
@@ -499,9 +499,9 @@
                     <img src="Upsekil logo Putih.png" alt="Logo Upsekil Monokrom" class="h-10 w-auto object-contain opacity-90 hover:opacity-100 transition">
                 </div>
                 <div class="flex space-x-6 text-2xl">
-                    <a href="#" class="text-slate-400 hover:text-white transition transform hover:scale-110"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="text-slate-400 hover:text-white transition transform hover:scale-110"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="text-slate-400 hover:text-white transition transform hover:scale-110"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://instagram.com/upsekil.id" class="text-slate-400 hover:text-white transition transform hover:scale-110"><i class="fab fa-instagram"></i></a>
+                    <a href="https://youtube.com/@upsekil" class="text-slate-400 hover:text-white transition transform hover:scale-110"><i class="fab fa-youtube"></i></a>
+                    <a href="https://facebook.com/upsekil.id" class="text-slate-400 hover:text-white transition transform hover:scale-110"><i class="fab fa-facebook"></i></a>
                 </div>
                 <p class="text-slate-500 text-sm">&copy; 2023 Upsekil. All rights reserved.</p>
             </div>
@@ -529,3 +529,4 @@
 </body>
 
 </html>
+
